# code-test

./: CMakeLists.txt  Robot_simulator_run  main.cpp
Google_tests/: CMakeLists.txt
Google_tests/tests/: CMakeLists.txt  basic_map_test.cpp  basic_robot_test.cpp  robot_manager_test.cpp
Instructions/: all-commands.txt  attempt-fall-x-axis.txt  attempt-fall-y-axis.txt  basic-move.txt  ignore-commands-before-place.txt
src/: CMakeLists.txt  basic_map.cpp  basic_map.h  basic_robot.cpp  basic_robot.h  coordinates.h  file_reader.cpp  file_reader.h  i_map.h  i_robot.h  robot_manager.cpp  robot_manager.h
